--- a/src/Leaderboard.css
+++ b/src/Leaderboard.css
@@ -60,6 +60,8 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .player-name {
@@ -69,6 +71,9 @@
 
 .player-school {
   font-size: 1.1rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 7vw;
   color: #6c757d;
 }
 
@@ -76,7 +81,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   color: #495057;
 }
 
